--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -31,5 +31,34 @@
 
     <div  class =" vazio ">
     </div>
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/braquiossaurop.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/braquiossaurom.jpg">        
+                <img src="imagens/braquiossaurog.jpg" alt="foto cortada de um braquiossauro mergulhando">
+            </picture>
+        </div>
+        <div class="vazio">
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/triceratopsp.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/triceratopsm.jpg">        
+                <img src="imagens/triceratopsg.jpg" alt="foto de um triceratops mergulhando">
+            </picture>
+        </div>
+        <div class="vazio">
+
+
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/tiranossaurop.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/tiranossaurom.jpg">        
+                <img src="imagens/tiranossaurog.jpg" alt="foto de um tiranossauro mergulhando">
+            </picture>
+        </div>
+        <div class="vazio">
 </body>
 </html>
