--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -49,8 +49,6 @@
             </picture>
         </div>
         <div class="vazio">
-
-
 </div>
         <div class="multimidia">
             <picture>
@@ -60,5 +58,6 @@
             </picture>
         </div>
         <div class="vazio">
+</div>
 </body>
 </html>
