--- a/Mergulho/pacotes.html
+++ b/Mergulho/pacotes.html
@@ -43,6 +43,39 @@ Equipamento
 <ul>
 Sem garantia de sobrevivência 
 </ul>
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/Homememumburrscocomaguap.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/Homememumburrscocomaguam.jpg">        
+                <img src="imagens/Homememumburrscocomaguag.jpg" alt="Homem em um burraco com agua ">
+            </picture>
+        </div>
+        <div class="vazio">
+</div>
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/homindoparaumburrscocomaguap.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/homindoparaumburrscocomaguam.jpg">        
+                <img src="imagens/homindoparaumburrscocomaguag.jpg" alt=" homem indo para um burraco com agua">
+            </picture>
+        </div>
+        <div class="vazio">
+</div>
+</div>
+        <div class="multimidia">
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/casalemumburrscocomaguap.jpg">
+                <source media="(max-width: 1050px)" srcset="imagens/casalemumburrscocomaguam.jpg">        
+                <img src="imagens/casalemumburrscocomaguag.jpg" alt="casal em um burraco com agua">
+            </picture>
+        </div>
+        <div class="vazio">
+</div>
+
+
+</div>
 </ol>
 <ol>
 Prata
