--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -4,7 +4,7 @@
     <meta  charset =" UTF-8 " >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta  name =" viewport " content =" largura=largura do dispositivo, escala inicial=1.0 " >
-    <title >Meteoro Marinho (+16) </title >
+    <title >Clientes</title >
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head >
