--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -31,5 +31,15 @@
 
     <div  class =" vazio ">
     </div>
+
+<div class="video">
+                <video controls width="550">
+                    <source src="midia/gimp.mp4" type="video/mp4">
+                    <source src="midia/gimp.m4v">
+                    <source src="midia/gimp.webm">
+                    <source src="midia/gimp.ogv">
+                    <p>F</p>
+                </video>
+            </div>
 </body>
 </html>
