--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -34,10 +34,10 @@
 
 <div class="video">
                 <video controls width="550">
-                    <source src="midia/gimp.mp4" type="video/mp4">
-                    <source src="midia/gimp.m4v">
-                    <source src="midia/gimp.webm">
-                    <source src="midia/gimp.ogv">
+                    <source src="midia/Movie001.mp4" type="video/mp4">
+                    <source src="midia/Movie001.m4v">
+                    <source src="midia/Movie001.webm">
+                    <source src="midia/Movie001.ogv">
                     <p>F</p>
                 </video>
             </div>
