--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -32,13 +32,14 @@
     <div  class =" vazio ">
     </div>
 
+<p>motivo para obedecer o instrutor: </p>
+
 <div class="video">
                 <video controls width="550">
                     <source src="midia/Movie001.mp4" type="video/mp4">
                     <source src="midia/Movie001.m4v">
                     <source src="midia/Movie001.webm">
-                    <source src="midia/Movie001.ogv">
-                    <p>F</p>
+                    <source src="midia/Movie001.ogv'>
                 </video>
             </div>
 </body>
