--- a/Mergulho/pacote.html
+++ b/Mergulho/pacote.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head >
 <body>
-
+<script>
+            function discente() {
+                var minimo = window.confirm("Você pretende causa algum problema para a nossa companhia depois de efetuar a compra de algum pacote?");
+                if(minimo) {
+                    window.alert("Agradecemos pelo mínimo :)")
+                }
+                else {
+                    window.location.href=""
+            }
+}
+            discente();
+</script>
     <nav>
         <ul>
             <li>
