--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -31,6 +31,23 @@
 
     <div  class =" vazio ">
     </div>
+<ul>
+Pegar ex tbm é talaricagem
+</ul>
+<ul>
+Não efetuar e efetuar com atraso o pagamento 
+</ul>
+<ul>
+Não ofender os funcionários. Nesta empresa o cliente não tem sempre razão, cuidado
+</ul>
+<ul>
+Assinar o termo de total responsabilidade
+</ul>
+<ul>
+Obedecer o instrutor 
+</ul>
+
+
 
 <p>motivo para obedecer o instrutor: </p>
 
