--- a/Mergulho/index.html
+++ b/Mergulho/index.html
@@ -31,5 +31,13 @@
 
     <div  class =" vazio ">
     </div>
+<h1>Meteoro Marinho a mais antiga empresa de megulho do mundo </h1>
+<h2>Funcionando desde a Era Mesozoica<h2>
+
+<p>Conheça nosso planos, clientes fiéis, regras e tenham uma pequena amostra das nossa excursões</p>
+  <br>
+<p> Porque morrer afogado é melhor que queimado ;)</p>
+<p> ps: antes de efetuar a compra deverá ser assinado um contrato de responsabilidade de quaisquer acidentes ocorrido durante a excursão</p>
+
 </body>
 </html>
