--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -39,6 +39,7 @@
                 <img src="imagens/braquiossaurog.jpg" alt="foto cortada de um braquiossauro mergulhando">
             </picture>
         </div>
+<p>Mil desculpas para ao Braquiossauro, pois n coube na foto :(</p>
         <div class="vazio">
 </div>
         <div class="multimidia">
@@ -48,6 +49,7 @@
                 <img src="imagens/triceratopsg.jpg" alt="foto de um triceratops mergulhando">
             </picture>
         </div>
+<p>Ao Tricerátops toda felicidade do mundo (ela não te merece cara).</p>
         <div class="vazio">
 </div>
         <div class="multimidia">
@@ -57,6 +59,7 @@
                 <img src="imagens/tiranossaurog.jpg" alt="foto de um tiranossauro mergulhando">
             </picture>
         </div>
+<p>O solteiro mais cobiçado do período Cretáceo</p>
         <div class="vazio">
 </div>
 </body>
