--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -56,7 +56,7 @@ Obedecer o instrutor
                     <source src="midia/Movie001.mp4" type="video/mp4">
                     <source src="midia/Movie001.m4v">
                     <source src="midia/Movie001.webm">
-                    <source src="midia/Movie001.ogv'>
+                    <source src="midia/Movie001.ogv">
                 </video>
             </div>
 </body>
