--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html  lang ="pt-br" >
-<head >
-    <meta  charset =" UTF-8 " >
+<html lang="pt-br">
+<head>
+    <meta  charset =" UTF-8 ">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta  name =" viewport " content =" largura=largura do dispositivo, escala inicial=1.0 " >
-    <title >Clientes</title >
+    <meta  name =" viewport " content="largura=largura do dispositivo, escala inicial=1.0">
+    <title>Clientes</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-</head >
+</head>
 <body>
 
     <nav>
         <ul>
             <li>
-                <a  href =" index.html "> PÁGINA INICIAL </a>
+                <a  href="index.html"> PÁGINA INICIAL </a>
             </li>
             <li>
-                <a  href ="pacotes.html " rel =" próximo " > PACOTES</a>
+                <a  href="pacotes.html" rel=""> PACOTES</a>
             </li>
             <li>
-                <a  href ="clientes.html "> CLIENTES</a>
+                <a  href="clientes.html">CLIENTES</a>
                 <ul>
-                    <li> <a  href ="juras.html "> JURÁSSICO </a> </li>
-                    <li> <a  href ="celebridades.html "> CELEBRIDADES </a > </li>
+                    <li> <a  href="juras.html"> JURÁSSICO </a> </li>
+                    <li> <a  href="celebridades.html"> CELEBRIDADES </a> </li>
                 </ul>
             </li>
-            <li> <a  href ="regras.html " > REGRAS DA AGÊNCIA</a> </li>    
+            <li> <a  href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
         </ul>
     </nav>        
 
-    <div  class =" vazio ">
+    <div  class ="vazio">
     </div>
 </body>
 </html>
