--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -4,7 +4,7 @@
     <meta  charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta  name="viewport" content="largura=largura do dispositivo, escala inicial=1.0">
-    <title >mergulho dos dinossauros </title >
+    <title>Mergulho dos dinossauros</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
