--- a/Mergulho/pacote.html
+++ b/Mergulho/pacote.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html  lang ="pt-br" >
-<head >
-    <meta  charset =" UTF-8 " >
+<html lang="pt-br">
+<head>
+    <meta  charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta  name =" viewport " content =" largura=largura do dispositivo, escala inicial=1.0 " >
-    <title >Comprar Pacote</title >
+    <meta  name="viewport" content="largura=largura do dispositivo, escala inicial=1.0">
+    <title>Comprar Pacote</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
-</head >
+</head>
 <body>
 <script>
             function discente() {
-                var minimo = window.confirm("Você pretende causa algum problema para a nossa companhia depois de efetuar a compra de algum pacote?");
-                if(minimo) {
+                var minimo=window.confirm("Você pretende causa algum problema para a nossa companhia depois de efetuar a compra de algum pacote?");
+                if(minimo){
                     window.alert("Agradecemos pelo mínimo :)")
                 }
-                else {
+                else{
                     window.location.href=""
             }
 }
@@ -24,19 +24,19 @@
     <nav>
         <ul>
             <li>
-                <a  href =" index.html "> PÁGINA INICIAL </a>
+                <a  href="index.html">PÁGINA INICIAL</a>
             </li>
             <li>
-                <a  href ="pacotes.html " rel =" próximo " > PACOTES</a>
+                <a  href="pacotes.html" rel="">PACOTES</a>
             </li>
             <li>
-                <a  href ="clientes.html "> CLIENTES</a>
+                <a  href="clientes.html">CLIENTES</a>
                 <ul>
-                    <li> <a  href ="juras.html "> JURÁSSICO </a> </li>
-                    <li> <a  href ="celebridades.html "> CELEBRIDADES </a > </li>
+                    <li> <a  href="juras.html">JURÁSSICO</a> </li>
+                    <li> <a  href="celebridades.html">CELEBRIDADES</a > </li>
                 </ul>
             </li>
-            <li> <a  href ="regras.html " > REGRAS DA AGÊNCIA</a> </li>    
+            <li> <a  href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
         </ul>
     </nav>        
 
@@ -90,7 +90,7 @@
                 </select>
                 <br>
 
-            <p><label for="idSug">Alergias e fobias do membros que iram para a viagem:</label><br><textarea type="text" cols="70" rows="5" name="nSugestao" id="idSug" placeholder="Informação necessaria para evitar acidentes desnecenarios :)"></textarea></p>
+            <p><label for="idSug">Alergias e fobias dos membros que iram para a viagem:</label><br><textarea type="text" cols="70" rows="5" name="nSugestao" id="idSug" placeholder="Informação necessaria para evitar acidentes desnecenarios :)"></textarea></p>
         
         </fieldset>
 
