--- a/Mergulho/pacote.html
+++ b/Mergulho/pacote.html
@@ -16,7 +16,7 @@
                     window.alert("Agradecemos pelo mínimo :)")
                 }
                 else{
-                    window.location.href="imagem/igorcuzao.jpg"
+                    window.location.href="imagens/igorcuzao.jpg"
             }
 }
             discente();
