--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="largura=largura do dispositivo, escala inicial=1.0">
+    <meta name="viewport" content="largura=largura do dispositivo escala inicial=1.0">
     <title>Clientes</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <nav>
-        <ul>
+    
+    <nav class="v">
+        <ul class="menu">
             <li>
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
@@ -31,5 +31,7 @@
 
     <div class="vazio">
     </div>
+    <main>
+    </main>
 </body>
 </html>
