--- a/Mergulho/index.html
+++ b/Mergulho/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <nav>
-        <ul>
+    
+    <nav class="v">
+        <ul class="menu">
             <li>
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
@@ -31,6 +31,7 @@
 
     <div class="vazio">
     </div>
+<main>
 <h1>Meteoro Marinho a mais antiga empresa de megulho do mundo </h1>
 <h2>Funcionando desde a Era Mesozoica<h2>
 
@@ -39,6 +40,6 @@
 <p> Porque morrer afogado é melhor que queimado ;)</p>
 <br>
 <p>ps: antes de efetuar a compra deverá ser assinado um contrato de responsabilidade de quaisquer acidentes ocorrido durante a excursão</p>
-
+</main>
 </body>
 </html>
