--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <nav>
-        <ul>
+    
+    <nav class="v">
+        <ul class="menu">
             <li>
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
@@ -32,6 +32,7 @@
     <div class="vazio">
     </div>
 </div>
+<main>
         <div class="multimidia">
             <picture>
                 <source media="(max-width: 750px)" srcset="imagens/braquiossaurop.jpg">
@@ -68,5 +69,6 @@
 <br>
         <div class="vazio">
 </div>
+</main>
 </body>
 </html>
