--- a/Mergulho/pacotes.html
+++ b/Mergulho/pacotes.html
@@ -10,8 +10,8 @@
 </head >
 <body>
 
-    <nav>
-        <ul>
+    <nav class="v">
+        <ul class="menu">
             <li>
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
@@ -25,12 +25,13 @@
                     <li> <a href="celebridades.html">CELEBRIDADES</a> </li>
                 </ul>
             </li>
-            <li> <a  href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
+            <li> <a href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
         </ul>
     </nav>        
 
     <div class="vazio">
     </div>
+    <main>
    <p>Pacotes</p> 
    <ol>
 Cobre
@@ -58,7 +59,7 @@ Sem garantia de sobrevivência
             <picture>
                 <source media="(max-width: 750px)" srcset="imagens/homindoparaumburrscocomaguap.jpg">
                 <source media="(max-width: 1050px)" srcset="imagens/homindoparaumburrscocomaguam.jpg">        
-                <img src="imagens/homindoparaumburrscocomaguag.jpg" alt=" homem indo para um burraco com agua">
+                <img src="imagens/homindoparaumburrscocomaguag.jpg" alt="Homem indo para um burraco com agua">
             </picture>
         </div>
         <div class="vazio">
@@ -74,7 +75,7 @@ Sem garantia de sobrevivência
         <div class="vazio">
 </div>
 
-
+<main>
 </div>
 </ol>
 <ol>
@@ -89,23 +90,24 @@ Equipamento
 <ul>
 Garantia de sobrevivência 
 </ul>
+
 </ol>
 <ol>
 Ouro
 <ul>
 Café da manhã 
 </ul>
-
-</ul>
-Instrutor 
 <ul>
+Instrutor 
 </ul>
+<ul>
 Equipamento 
 </ul>
 <ul>
 Garantia de sobrevivência
 </ul>
 </ol>
-<p>Caso interesse de compra vá para o <a href="pacote.html">carinho</a></p>
+<p>Caso interesse de compra vá para o <a  style="color:#000000" href="pacote.html">carinho</a></p>
+</main>
 </body>
 </html>
