--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -10,8 +10,8 @@
 </head >
 <body>
 
-    <nav>
-        <ul>
+    <nav class="v">
+        <ul class="menu">
             <li>
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
@@ -31,6 +31,7 @@
 
     <div class="vazio">
     </div>
+    <main>
 <ul>
 Pegar ex tbm é talaricagem
 </ul>
@@ -59,5 +60,6 @@ Obedecer o instrutor
                     <source src="midia/Movie001.ogv">
                 </video>
             </div>
+        </main>
 </body>
 </html>
