--- a/Mergulho/juras.html
+++ b/Mergulho/juras.html
@@ -16,13 +16,13 @@
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
             <li>
-                <a href="pacotes.html" rel="">PACOTES</a>
+                <a href="pacotes.html">PACOTES</a>
             </li>
             <li>
                 <a href="clientes.html">CLIENTES</a>
                 <ul>
                     <li> <a href="juras.html">JURÁSSICO</a> </li>
-                    <li> <a href="celebridades.html">CELEBRIDADES</a> </li>
+                    <li> <a href="celebridades.html" rel="next">CELEBRIDADES</a> </li>
                 </ul>
             </li>
             <li> <a href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
