--- a/Mergulho/pacotes.html
+++ b/Mergulho/pacotes.html
@@ -16,10 +16,10 @@
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
             <li>
-                <a href="pacotes.html" rel="">PACOTES</a>
+                <a href="pacotes.html">PACOTES</a>
             </li>
             <li>
-                <a href="clientes.html"> CLIENTES</a>
+                <a href="clientes.html" rel="next"> CLIENTES</a>
                 <ul>
                     <li> <a href="juras.html">JURÁSSICO</a> </li>
                     <li> <a href="celebridades.html">CELEBRIDADES</a> </li>
@@ -106,6 +106,7 @@ Equipamento
 <ul>
 Garantia de sobrevivência
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VXn8VLblV2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>4
 </ol>
 <p>Caso interesse de compra vá para o <a  style="color:#000000" href="pacote.html">carinho</a></p>
 </main>
