--- a/Mergulho/regras.html
+++ b/Mergulho/regras.html
@@ -16,7 +16,7 @@
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
             <li>
-                <a href="pacotes.html" rel="" >PACOTES</a>
+                <a href="pacotes.html">PACOTES</a>
             </li>
             <li>
                 <a href="clientes.html">CLIENTES</a>
