--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -21,7 +21,7 @@
             <li>
                 <a href="clientes.html">CLIENTES</a>
                 <ul>
-                    <li> <a href="juras.html">JURÁSSICO</a> </li>
+                    <li> <a href="juras.html" rel="next">JURÁSSICO</a> </li>
                     <li> <a href="celebridades.html">CELEBRIDADES</a> </li>
                 </ul>
             </li>
