--- a/Mergulho/celebridades.html
+++ b/Mergulho/celebridades.html
@@ -16,7 +16,7 @@
                 <a href="index.html">PÁGINA INICIAL</a>
             </li>
             <li>
-                <a href="pacotes.html" rel="">PACOTES</a>
+                <a href="pacotes.html">PACOTES</a>
             </li>
             <li>
                 <a href="clientes.html">CLIENTES</a>
@@ -25,7 +25,7 @@
                     <li> <a href="celebridades.html">CELEBRIDADES</a> </li>
                 </ul>
             </li>
-            <li> <a href="regras.html">REGRAS DA AGÊNCIA</a> </li>    
+            <li> <a href="regras.html" rel="next">REGRAS DA AGÊNCIA</a> </li>    
         </ul>
     </nav>        
 
