--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -32,6 +32,11 @@
     <div class="vazio">
     </div>
     <main>
+<audio controls preload="metadata" loop>
+            <source src="midia/somdemergulho.mp3" type="audio/mpeg">
+            <source src="midia/somdemergulho.ogg" type="audio/ogg">
+            <source src="somdemergulho.wav" type="audio/wav">
+        </audio>midia/
     </main>
 </body>
 </html>
