--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -36,7 +36,7 @@
             <source src="midia/somdemergulho.mp3" type="audio/mpeg">
             <source src="midia/somdemergulho.ogg" type="audio/ogg">
             <source src="somdemergulho.wav" type="audio/wav">
-        </audio>midia/
+        </audio>
     </main>
 </body>
 </html>
