--- a/Mergulho/celebridades.html
+++ b/Mergulho/celebridades.html
@@ -32,6 +32,11 @@
     <div class="vazio">
     </div>
     <main>
+<picture>
+            <source media="(max-width: 750px)" srcset="imagens/download-p.png">
+            <source media="(max-width: 1050)" srcset="imagens/download-m.png">
+            <a href="imagens/imagens.zip" download="imagens" type="application/zip"> <img src="imagens/download-g.png" alt="simbolo download"></a>
+        </picture>
     </main>
 </body>
 </html>
