--- a/Mergulho/celebridades.html
+++ b/Mergulho/celebridades.html
@@ -32,6 +32,7 @@
     <div class="vazio">
     </div>
     <main>
+<p>download de fotos de artista mergulho para você se inspirar ;)</p>
 <picture>
             <source media="(max-width: 750px)" srcset="imagens/download-p.png">
             <source media="(max-width: 1050)" srcset="imagens/download-m.png">
