--- a/Mergulho/clientes.html
+++ b/Mergulho/clientes.html
@@ -32,11 +32,13 @@
     <div class="vazio">
     </div>
     <main>
+<p> Áudio gravado pelo nosso principal cliente, VOCÊ!!!!</p>
 <audio controls preload="metadata" loop>
             <source src="midia/somdemergulho.mp3" type="audio/mpeg">
             <source src="midia/somdemergulho.ogg" type="audio/ogg">
             <source src="somdemergulho.wav" type="audio/wav">
         </audio>
+
     </main>
 </body>
 </html>
